@@ -1,7 +1,10 @@
 --- CHANGELOG ---
 --- PyFMI-2.10.2 ---
     * Corrected version number.
-    * Added method to retrieve the unbounded attribute for real variables
+    * Added method to retrieve the unbounded attribute for real variables in FMI2: get_variable_unbounded.
+    * Note: With Assimulo >= 3.4.1 CVode adds supports relative tolerance vectors, see Assimulo README for details.
+    * Added partial support for rtol vectors in simulate(): Values need to be equal except for zeros & requires support from used solver.
+    * For unbounded states, the simulate method attempts to create a vector of relative tolerances and entries that correspond to unbounded states are set to zero. (FMI2 ME only)
 
 --- PyFMI-2.10.1 ---
     * Changed such that absolute tolerances calculated with state nominals retrieved before initialization will be recalculated with state nominals from after initialization when possible.
